[WIP] Creating board

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -1,24 +1,14 @@
 // ******************
-// example
+// c-board
 // ***
 
 $component-name: 'c-board'
 
 .#{$component-name}
-  margin: 0 auto
-  width: 500px
-
-.#{$component-name}__item
-    display: inline-block
-    width: 10px
-    height: 10px
-    background-color: red
-
-.#{$component-name}__line
-  padding: 0;
-  height: 10px;
-  background-color: black;
-  display: block;
-  overflow: hidden;
-  line-height: 10px;
+  text-align: center
+  background-color: black
+  overflow: hidden
+  width: 255px
+  margin: 50px auto
+  padding: 20px
 
