[WIP] Creating options component

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -48,3 +48,7 @@ q:before, q:after
 table
   border-collapse: collapse
   border-spacing: 0
+
+html, body
+  background-color: $color-dark
+  color: $color-ligth
