--- a/src/assets/sass/components/_field.sass
+++ b/src/assets/sass/components/_field.sass
@@ -7,21 +7,20 @@ $component-name: 'c-field'
 .#{$component-name}
   margin: 0 auto
   width: 50px
-  float: left
 
 .#{$component-name}__item
     display: inline-block
     width: 10px
     height: 10px
-    background-color: black
+    background-color: $color-dark
     &.is-active
-      background-color: green
+      background-color: $color-primary
 
 .#{$component-name}__line
-  padding: 0;
-  height: 10px;
-  background-color: black;
-  display: block;
-  overflow: hidden;
-  line-height: 10px;
+  padding: 0
+  height: 10px
+  background-color: $color-dark
+  display: block
+  overflow: hidden
+  line-height: 10px
 
