--- a/src/assets/sass/components/_options.sass
+++ b/src/assets/sass/components/_options.sass
@@ -1,9 +1,10 @@
 // ******************
-// c-board
+// c-options
 // ***
 
-$component-name: 'c-board'
+$component-name: 'c-options'
 
 .#{$component-name}
   text-align: center
-  overflow: hidden
+
+.#{$component-name}__list
