--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -18,6 +18,7 @@
 // layout
 @import 'layout'
 
-// modules
+// components
 @import './components/board'
 @import './components/field'
+@import './components/options'
