[FIX] some positions

--- a/src/assets/sass/components/_field.sass
+++ b/src/assets/sass/components/_field.sass
@@ -7,6 +7,7 @@ $component-name: 'c-field'
 .#{$component-name}
   margin: 0 auto
   width: 50px
+  display: inline-block
 
 .#{$component-name}__item
     display: inline-block
