feat(app): bunch of layout and data changes

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -7,3 +7,13 @@ $component-name: 'c-board'
 .#{$component-name}
   text-align: center
   overflow: hidden
+  background-color: $color-ligth
+  color: $color-dark
+  box-sizing: border-box
+  padding: 10px
+
+.#{$component-name}__list
+  background-color: $color-dark
+  box-sizing: border-box
+  padding: 5px
+  min-height: 63px
