--- a/src/assets/sass/components/_options.sass
+++ b/src/assets/sass/components/_options.sass
@@ -6,3 +6,10 @@ $component-name: 'c-options'
 
 .#{$component-name}
   text-align: center
+  padding: 10px
+
+.#{$component-name}__button
+  background-color: transparent
+  border: 1px solid $color-secondary
+  padding: 3px
+  margin: 3px
