--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -6,6 +6,8 @@
 $font-family-default: 'Arial'
 
 // colors
-$color-dark: #1C1C1C
-$color-ligth: #F9F9F9
-$color-primary: #088508
+$color-dark: #1F5716
+$color-ligth: #E5FEE9
+$color-primary: #FDFBFC
+$color-secondary: #97E381
+
