feat(game): starting timer

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -17,3 +17,8 @@ $component-name: 'c-board'
   box-sizing: border-box
   padding: 5px
   min-height: 63px
+
+.#{$component-name}__item
+  transition: 0.2s
+  &.is-matched
+    opacity: 0
