fix(timer): some small css changes

--- a/src/assets/sass/components/_timer.sass
+++ b/src/assets/sass/components/_timer.sass
@@ -5,16 +5,16 @@
 $component-name: 'c-timer'
 
 .#{$component-name}
-  background-color: red
+  background-color: #FF4C4C
   position: fixed
   width: 100%
-  bottom: 0
-  height: 20px
+  top: 0
+  height: 10px
   text-align: center
 
 .#{$component-name}__bar
-  background-color: blue
+  background-color: #FFFB6C
   margin: 0 auto
   height: 100%
   display: block
-  transition: 0.3s
+  transition: 0.2s
