--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -3,11 +3,11 @@
 // ***
 
 // fonts
-$font-family-default: 'Arial'
+$font-family-default: 'monospace'
 
 // colors
-$color-dark: #1F5716
-$color-ligth: #E5FEE9
+$color-dark: #2F8421
+$color-ligth: #006A11
 $color-primary: #FDFBFC
 $color-secondary: #97E381
 
