fix(countdown): bug when it over

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -8,7 +8,7 @@ $component-name: 'c-board'
   text-align: center
   overflow: hidden
   background-color: $color-ligth
-  color: $color-dark
+  color: $color-primary
   box-sizing: border-box
   padding: 10px
 
