--- a/src/templates/header.ejs
+++ b/src/templates/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= data.foo.bar.title %></title>
   <link rel="stylesheet" href="/dist/assets/css/main.css" />
 </head>
