feat(game): Change timer to progress-bar/use classnames module instead of cx

--- a/src/assets/sass/components/_progress-bar.sass
+++ b/src/assets/sass/components/_progress-bar.sass
@@ -1,8 +1,8 @@
 // ******************
-// c-timer
+// c-progress-bar
 // ***
 
-$component-name: 'c-timer'
+$component-name: 'c-progress-bar'
 
 .#{$component-name}
   background-color: #FF4C4C
