feat(ui): Adding new font

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -50,5 +50,6 @@ table
   border-spacing: 0
 
 html, body
-  background-color: $color-dark
-  color: $color-primary
+  background-color: $color-primary
+  color: $color-dark
+  height: 100%
