feat(app): Creating startup component

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -12,6 +12,8 @@
 // NOTE: You can import fonts like the example below.
 // @import '../fonts/font-name/font-file.css'
 
+@import '../fonts/lcd/stylesheet.css'
+
 // base
 @import 'base'
 
@@ -24,3 +26,6 @@
 @import './components/options'
 @import './components/inline-list'
 @import './components/progress-bar'
+@import './components/title'
+@import './components/flex-container'
+@import './components/startup'
