--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -3,11 +3,12 @@
 // ***
 
 // fonts
-$font-family-default: 'monospace'
+$font-family-default: 'lcd_solidregular'
 
 // colors
-$color-dark: #2F8421
-$color-ligth: #006A11
-$color-primary: #FDFBFC
+$color-primary: #3D5928
 $color-secondary: #97E381
+
+$color-dark: #1F2326
+$color-ligth: #006A11
 
