--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,3 +1,3 @@
 <%- include('templates/header') %>
-  <div id="app"></div>
+  <div id="app" class="c-flex-container"></div>
 <%- include('templates/footer') %>
