feat(styles): Bunch of layout changes (including button component, and some adjusts)

--- a/src/assets/sass/components/_startup.sass
+++ b/src/assets/sass/components/_startup.sass
@@ -6,6 +6,11 @@ $component-name: 'c-startup'
 
 .#{$component-name}
   text-align: center
+  font-size: $font-size-default
 
 .#{$component-name}__item
   margin: auto
+
+.#{$component-name}__button
+  width: 190px
+  margin: 20px auto
