--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -29,3 +29,4 @@
 @import './components/title'
 @import './components/flex-container'
 @import './components/startup'
+@import './components/button'
