--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -4,11 +4,14 @@
 
 // fonts
 $font-family-default: 'lcd_solidregular'
+$font-size-default: 20px
 
 // colors
 $color-primary: #3D5928
 $color-secondary: #97E381
 
+$color-primary-dark: #2D401B
+$color-primary-ligth: #A69580
+
 $color-dark: #1F2326
 $color-ligth: #006A11
-
