fix(styles): Change some colors for each fields

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -7,12 +7,12 @@ $component-name: 'c-board'
 .#{$component-name}
   text-align: center
   overflow: hidden
-  color: $color-primary
+  color: $color-secondary
   box-sizing: border-box
   padding: 10px
 
 .#{$component-name}__list
-  background-color: $color-dark
+  background-color: $color-primary
   box-sizing: border-box
   padding: 5px
   min-height: 63px
