--- a/src/assets/sass/components/_field.sass
+++ b/src/assets/sass/components/_field.sass
@@ -13,15 +13,14 @@ $component-name: 'c-field'
     display: inline-block
     width: 10px
     height: 10px
-    background-color: $color-dark
+    background-color: $color-secondary
     &.is-active
       background-color: $color-primary
 
 .#{$component-name}__line
   padding: 0
   height: 10px
-  background-color: $color-dark
   display: block
   overflow: hidden
-  line-height: 10px
+  line-height: 7px
 
