fix(progress-bar): Set correct position

--- a/src/assets/sass/components/_progress-bar.sass
+++ b/src/assets/sass/components/_progress-bar.sass
@@ -11,6 +11,7 @@ $component-name: 'c-progress-bar'
   top: 0
   height: 10px
   text-align: center
+  left: 0
 
 .#{$component-name}__bar
   background-color: #FFFB6C
