feat(layout): Bunch of layout changes

--- a/src/assets/sass/components/_board.sass
+++ b/src/assets/sass/components/_board.sass
@@ -7,12 +7,11 @@ $component-name: 'c-board'
 .#{$component-name}
   text-align: center
   overflow: hidden
-  color: $color-secondary
   box-sizing: border-box
-  padding: 10px
+  padding: 10px 0
+  background-color: $color-primary-dark
 
 .#{$component-name}__list
-  background-color: $color-primary
   box-sizing: border-box
   padding: 5px
   min-height: 63px
