--- a/src/assets/sass/components/_startup.sass
+++ b/src/assets/sass/components/_startup.sass
@@ -5,11 +5,15 @@
 $component-name: 'c-startup'
 
 .#{$component-name}
-  text-align: center
   font-size: $font-size-default
 
 .#{$component-name}__item
   margin: auto
+  position: fixed
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  text-align: center
 
 .#{$component-name}__button
   width: 190px
