--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -30,3 +30,4 @@
 @import './components/flex-container'
 @import './components/startup'
 @import './components/button'
+@import './components/timer'
