--- a/src/assets/sass/components/_options.sass
+++ b/src/assets/sass/components/_options.sass
@@ -6,7 +6,8 @@ $component-name: 'c-options'
 
 .#{$component-name}
   text-align: center
-  padding: 10px
+  padding: 10px 0
+  background-color: $color-primary-dark
 
 .#{$component-name}__button
   background-color: transparent
