feat(layout): Applying new layout changes

--- a/src/assets/sass/components/_progress-bar.sass
+++ b/src/assets/sass/components/_progress-bar.sass
@@ -5,12 +5,15 @@
 $component-name: 'c-progress-bar'
 
 .#{$component-name}
-  background-color: #FF4C4C
+  background-color: #C83E37
   width: 100%
   top: 0
-  height: 40px
-  text-align: center
   left: 0
+  height: 100%
+  text-align: center
+  position: absolute
+  z-index: $z-index--progress-bar
+
 
 .#{$component-name}__bar
   background-color: #FFFB6C
