--- a/src/assets/sass/components/_timer.sass
+++ b/src/assets/sass/components/_timer.sass
@@ -6,8 +6,12 @@ $component-name: 'c-timer'
 
 .#{$component-name}
   text-align: center
-  color: $color-primary-ligth
+  color: $color-primary-dark
   font-size: 40px
-  max-width: 960px
   margin: 0 auto
   padding: 30px 0
+  position: relative
+
+.#{$component-name}__value
+  position: relative
+  z-index: $z-index--timer__value
