--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -15,3 +15,7 @@ $color-primary-ligth: #A69580
 
 $color-dark: #1F2326
 $color-ligth: #006A11
+
+// z-index
+$z-index--progress-bar: 1
+$z-index--timer__value: 2
