--- a/src/assets/sass/shared/_extends.sass
+++ b/src/assets/sass/shared/_extends.sass
@@ -1,3 +1,12 @@
 // ******************
 // extends
 // ***
+
+%at-center
+  position: fixed
+  width: 100%
+  left: 50%
+  top: 50%
+  margin: auto
+  text-align: center
+  transform: translate(-50%, -50%)
