--- a/src/assets/sass/components/_button.sass
+++ b/src/assets/sass/components/_button.sass
@@ -16,6 +16,7 @@ $component-name: 'c-button'
   font-size: $font-size-default
   font-family: $font-family-default
   color: $color-primary-ligth
-  transition: 0.3s
-  &:active
+  transition: 0.5s
+  &:active, &:hover
     background-color: darken($color-primary-dark, 3%)
+
