--- a/src/assets/sass/components/_game.sass
+++ b/src/assets/sass/components/_game.sass
@@ -6,3 +6,14 @@ $component-name: 'c-game'
 
 .#{$component-name}
   @extend  %at-center
+
+.#{$component-name}__title
+  user-select: none
+
+.#{$component-name}--over
+  font-size: 20px
+  line-height: 60px
+
+.#{$component-name}__button
+  width: 190px
+  margin: 0 auto
