--- a/src/assets/sass/components/_field.sass
+++ b/src/assets/sass/components/_field.sass
@@ -13,7 +13,8 @@ $component-size: 13px
     display: inline-block
     width: $component-size
     height: $component-size
-    background-color: $color-secondary
+    background-color: $color-secondary // #97e381
+    box-shadow: -15px 5px 45px #0f0
     &.is-active
       background-color: $color-primary-dark
 
