--- a/src/assets/sass/components/_timer.sass
+++ b/src/assets/sass/components/_timer.sass
@@ -6,11 +6,12 @@ $component-name: 'c-timer'
 
 .#{$component-name}
   text-align: center
-  color: $color-primary-dark
+  color: $color-primary-light
   font-size: 40px
   margin: 0 auto
   padding: 30px 0
   position: relative
+  text-shadow: 0 0 5px lime;
 
 .#{$component-name}__value
   position: relative
