--- a/src/assets/sass/shared/_config.sass
+++ b/src/assets/sass/shared/_config.sass
@@ -7,11 +7,14 @@ $font-family-default: 'lcd_solidregular'
 $font-size-default: 20px
 
 // colors
-$color-primary: #3D5928
+$color-primary: #1F380C
 $color-secondary: #97E381
 
-$color-primary-dark: #2D401B
-$color-primary-ligth: #A69580
+$color-primary-dark: #1C2B0D
+$color-primary-light: #F5FFD7
+
+$color-secondary-dark: #131F08
+$color-secondary-light: lime
 
 $color-dark: #1F2326
 $color-ligth: #006A11
