--- a/src/assets/sass/components/_button.sass
+++ b/src/assets/sass/components/_button.sass
@@ -15,8 +15,9 @@ $component-name: 'c-button'
   outline: 0
   font-size: $font-size-default
   font-family: $font-family-default
-  color: $color-primary-ligth
+  color: $color-primary-light
   transition: 0.5s
+  text-shadow: 0 0 5px $color-secondary-light
   &:active, &:hover
     background-color: darken($color-primary-dark, 3%)
 
