--- a/src/assets/sass/components/_options.sass
+++ b/src/assets/sass/components/_options.sass
@@ -11,8 +11,8 @@ $component-name: 'c-options'
 
 .#{$component-name}__button
   background-color: transparent
-  border: 1px solid $color-secondary
-  padding: 3px
+  border: 1px solid $color-primary-light
+  padding: 3px 3px 2px 3px
   margin: 3px
   cursor: pointer
   outline: 0
