fix(styles): Adding background image from the dist dir
When I moved images from src to dist dir, I had to change the source of
my css as well.

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -63,5 +63,5 @@ html, body
     position: absolute
     width: 100%
     height: 100%
-    background-image: url(http://css4.com/wp-content/uploads/2013/10/pattern-generator.png)
+    background-image: url(/dist/assets/images/pattern.png)
     opacity: 0.1
