--- a/src/assets/sass/components/_social.sass
+++ b/src/assets/sass/components/_social.sass
@@ -2,15 +2,17 @@
 // c-social
 // ***
 
+
 $component-name: 'c-social'
+$component-size: 30px
 
 .#{$component-name}
   position: fixed
   top: 0
   right: 0
   .c-icon
-    width: 30px
-    height: 30px
+    width: $component-size
+    height: $component-size
     fill: $color-primary-light
 		transition: 0.3s
 
