--- a/src/assets/sass/components/_timer.sass
+++ b/src/assets/sass/components/_timer.sass
@@ -3,15 +3,18 @@
 // ***
 
 $component-name: 'c-timer'
+$component-font-size: 40px
 
 .#{$component-name}
   text-align: center
   color: $color-primary-light
-  font-size: 40px
+  font-size: $component-font-size
   margin: 0 auto
   padding: 30px 0
   position: relative
-  text-shadow: 0 0 5px lime;
+  text-shadow: 0 0 5px lime
+  +media('mobile')
+    font-size: $component-size / 2
 
 .#{$component-name}__value
   position: relative
