--- a/src/assets/sass/shared/_mixins.sass
+++ b/src/assets/sass/shared/_mixins.sass
@@ -1,3 +1,9 @@
 // ******************
 // mixins
 // ***
+
+// media
+=media($type)
+  @if $type == "mobile"
+        @media screen and (max-width: 600px)
+                    @content
