feat(mobile-ux): improve button hit area
These changes improve the button hit area on the `mobile` breakpoint.

--- a/src/assets/sass/components/_startup.sass
+++ b/src/assets/sass/components/_startup.sass
@@ -13,3 +13,9 @@ $component-name: 'c-startup'
 .#{$component-name}__button
   width: 190px
   margin: 20px auto
+  +media('mobile')
+    width: 100%
+    margin: 40px auto
+    > .c-button
+      width: 90%
+      padding: 40px 30px
