style(mobile-ux): improve `c-field` displacement
Improve `c-field` items displacement by decreasing the horizontal margin
between each one of them.

--- a/src/assets/sass/components/_field.sass
+++ b/src/assets/sass/components/_field.sass
@@ -7,5 +7,5 @@ $component-name: 'c-field'
 .#{$component-name}
   margin: 0 5px
   +media('mobile')
-    margin: 0
+    margin: 0 -2.5px
     transform: scale(0.75)
