--- a/src/assets/sass/components/_options.sass
+++ b/src/assets/sass/components/_options.sass
@@ -11,13 +11,11 @@ $component-name: 'c-options'
 
 .#{$component-name}__button
   background-color: transparent
+  border: 1px solid $color-primary-light
+  padding: 3px 3px 2px 3px
+  margin: 3px
   cursor: pointer
   outline: 0
-  border: 0
-  padding: 0
   transition: 0.3s
   &:hover
     opacity: 0.5
-  > .c-field
-    padding: 3px
-    border: 1px solid $color-primary-light
